--- a/src/ff1.html
+++ b/src/ff1.html
@@ -200,7 +200,7 @@
             // After 3s, redirect to the real webpage
             setTimeout(() => {
                 // window.location.href = 'http://20.188.121.247/';
-                window.location.href = "https://ladpc4.github.io/fanfare/welcome.html";
+                window.location.href = "https://ladpc4.github.io/supplier-registry/src/welcome.html";
             }, 5000);
             
         }
