--- a/welcome.html
+++ b/welcome.html
@@ -16,7 +16,7 @@
 
 
 </head>
-<body class="font-sans antialiased h-full">
+<body class="font-sans antialiased h-full bg-white min-h-screen fade-in-body">
     <!-- resources/views/layouts/navigation.blade.php -->
 <nav class="bg-white border-b border-gray-200 w-full">
     <div class="max-w-7xl mx-auto px-4 sm:px-6 lg:px-8">
@@ -95,5 +95,15 @@
             </div>
         </div>
     </main>
+    <script>
+
+        // Fade-in effect for homepage
+            document.addEventListener('DOMContentLoaded', function() {    
+                setTimeout(function() {        
+                    document.querySelector('.fade-in-body').classList.add('visible');    
+                }, 100); 
+                });
+
+    </script>
 </body>
 </html>
