inline style black welcome

--- a/welcome.html
+++ b/welcome.html
@@ -16,7 +16,7 @@
 
 
 </head>
-<body class="font-sans antialiased h-full bg-black min-h-screen fade-in-body">
+<body class="font-sans antialiased h-full bg-black min-h-screen fade-in-body" style="background-color: #000000;">
     <!-- resources/views/layouts/navigation.blade.php -->
 <nav class="bg-white border-b border-gray-200 w-full">
     <div class="max-w-7xl mx-auto px-4 sm:px-6 lg:px-8">
