Script for fadein

--- a/welcome.html
+++ b/welcome.html
@@ -95,7 +95,7 @@
             </div>
         </div>
     </main>
-<!--     <script>
+    <script>
 
         // Fade-in effect for homepage
             document.addEventListener('DOMContentLoaded', function() {    
@@ -104,6 +104,6 @@
                 }, 100); 
                 });
 
-    </script> -->
+    </script>
 </body>
 </html>
