fix css difference in welcome duplicate and original

--- a/welcome.html
+++ b/welcome.html
@@ -39,11 +39,11 @@
             <div class="hidden sm:flex sm:items-center sm:ml-6">
                     <div class="flex h-full items-center space-x-8">
                         <a href="http://20.188.121.247/contact" 
-                            class="inline-flex items-center h-full px-1 border-b-2 {{ request()->routeIs('contact') ? 'border-indigo-500 text-gray-900' : 'border-transparent text-gray-500 hover:border-gray-300 hover:text-gray-700' }}">
+                            class="inline-flex items-center h-full px-1 border-b-2 border-transparent text-gray-500 hover:border-gray-300 hover:text-gray-700">
                             Contact Us
                         </a>
                         <a href="http://20.188.121.247/login" 
-                            class="inline-flex items-center h-full px-1 border-b-2 {{ request()->routeIs('login') ? 'border-indigo-500 text-gray-900' : 'border-transparent text-gray-500 hover:border-gray-300 hover:text-gray-700' }}">
+                            class="inline-flex items-center h-full px-1 border-b-2 border-transparent text-gray-500 hover:border-gray-300 hover:text-gray-700">
                             Login
                         </a>
                     </div>
